Add more sample persons